2008-01-30  Geoffrey Hutchison  <babel@geoffhutchison.net>

	Fixes contributed by Liu Zhiguo via e-mail.
	* src/data.cpp (OBResidueData::AssignBonds): For pre-defined
	residues, do not check distances. (PDB files should be fairly
	clean.)
	(OBGlobalDataBase::Init): Make sure to check return value from
	OpenDatafile.

	* src/mol.cpp (operator +=): Make sure to preserve residue
	information when appending.
	(ConnectTheDots): Make sure to preserve existing bonds, e.g. from
	PDB files.

	* src/atom.cpp: (IsHBondAcceptor, IsHBondDonorH): Improvements for
	more accurate description of h-bonding. IsHBondDonorH now cleanly
	checks neighbors for IsHBondDonor rather than duplicating logic.

	* src/formats/mol2format.cpp: Don't attempt to re-perceive atom types.

2008-01-30  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/openbabel-java.i: Updated to make identical (in terms of
	includes and header files) to python wrapper. Added ignore statements
	for operators as there are just too many warnings about these.

2008-01-29  Joshua Ballanco <jballanc@gmail.com>

	* scripts/ruby/extconf.rb: Fixed an error that had Ruby 1.8.6
	using gcc to compile and link the C++ extension file. Also updated
	the method of finding the correct include directories.

2008-01-24  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/python/setup.py: Changed search method to find openbabel.so
	(may need testing on other platforms)
	* scripts/openbabel-perl.i: Updated to make identical (in terms of
	includes and header files) to python wrapper.

2008-01-24  Chris Morley
	
	* src/formats/inchiformat.cpp(WriteMolecule): remove #ifdef _WIN32
	from InChIKey code.

2008-01-24  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/Makefile.am,Makefile.in: Incorporated Rich Apodaca's fix
	for Ruby OpenBabel error message "undefined symbol: Init_openbabel"
	* scripts/openbabel-ruby.i: Updated to include same header files as
	openbabel-python, but commented out problematic obfingerprint.h. Also