@@ -1,9 +1,13 @@
 # Creates a makefile to build the Open Babel-Ruby extension.
 
-# Compensate for the fact that OpenBabel on OS X will not compile
-# as a universal binary by default.
-if system('uname > /dev/null') && `uname -smr` =~ /^Darwin 9.* i386$/
-  ENV['ARCHFLAGS'] = '-arch i386'
+# Compensate for the fact that Ruby will try to build universal
+# binaries on OS X by default
+require 'rbconfig'
+if Config::CONFIG["arch"] =~ /universal-darwin/
+  case `uname -smr`.chomp
+  when "i386" : ENV['ARCHFLAGS'] = '-arch i386'
+  when "ppc"  : ENV['ARCHFLAGS'] = '-arch ppc'
+  end
 end
 
 require 'mkmf'
@@ -25,16 +29,15 @@ if RUBY_VERSION < "1.9"
       end
     end
   rescue Errno::ENOENT
-    puts 'Please configure OpenBabel before compiling the Ruby extension'
+    puts 'Please configure Open Babel before compiling the Ruby extension'
   end
-  
   cpp_command(cxx)
-  CONFIG['LDSHARED'] = "#{cxx} #{ENV['ARCHFLAGS']} -pipe -bundle"
 end
 
 if have_library('openbabel')
-  create_makefile('openbabel')
+  with_ldflags("#$LDFLAGS -dynamic -flat_namespace") do #Enables cc to handle linking better.
+    create_makefile('openbabel')
+  end
 else
   puts "Install Open Babel first. If you've already compiled and installed Open Babel, you may need to run ldconfig."
 end
-
